RESOLVED FIXED205731
dispatchEvent() should not clear the event's isTrusted flag when it returns early
https://bugs.webkit.org/show_bug.cgi?id=205731
Summary dispatchEvent() should not clear the event's isTrusted flag when it returns e...
Chris Dumez
Reported 2020-01-03 10:08:17 PST
dispatchEvent() should not clear the event's isTrusted flag when it returns early: - https://dom.spec.whatwg.org/#dom-eventtarget-dispatchevent
Attachments
Patch (3.61 KB, patch)
2020-01-03 10:09 PST, Chris Dumez
sam: review+
Chris Dumez
Comment 1 2020-01-03 10:09:33 PST
Chris Dumez
Comment 2 2020-01-03 15:03:24 PST
Comment on attachment 386695 [details] Patch iOS needs rebaseline
Chris Dumez
Comment 3 2020-01-03 15:05:19 PST
Radar WebKit Bug Importer
Comment 4 2020-01-03 15:06:19 PST
Note You need to log in before you can comment on or make changes to this bug.