dispatchEvent() should not clear the event's isTrusted flag when it returns early https://bugs.webkit.org/show_bug.cgi?id=205731

Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

Rebaseline WPT test now that more checks are passing.

* web-platform-tests/dom/events/Event-dispatch-redispatch-expected.txt:

Source/WebCore:

dispatchEvent() should not clear the event's isTrusted flag when it returns early:
- https://dom.spec.whatwg.org/#dom-eventtarget-dispatchevent

No new tests, rebaselined existing test.

* dom/EventTarget.cpp:
(WebCore::EventTarget::dispatchEventForBindings):

Canonical link: https://commits.webkit.org/218891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254016 268f45cc-cd09-0410-ab3c-d52691b4dbfc